[package]
name = "samepic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image_compare"

[[bin]]
name = "gui"

[[bin]]
name = "test"

[profile.dev]
#opt-level = 3


[dependencies]
camino = "1.0.9"
chrono = "0.4.20"
image = "0.24.3"
image_hasher = "1.0.0"
itertools = "0.10.3"
kamadak-exif = "0.5.4"
tabled = "0.8.0"
thiserror = "1.0.32"
walkdir = "2.3.2"
eframe = { version = "0.18.0", features = ["persistence"] }
egui = "0.18.1"
egui_extras = { version = "0.18.0", features = ["image"] }
serde = { version = "1.0.142", features = ["serde_derive"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
lru = "0.7.8"
