[package]
name = "samepic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
#opt-level = 3

[dependencies]
camino = "1.0.9"
chrono = "0.4.20"
image = "0.24.3"
image_hasher = "1.0.0"
itertools = "0.10.3"
kamadak-exif = "0.5.4"
thiserror = "1.0.32"
walkdir = "2.3.2"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
color-eyre = "0.6.2"
clap = { version = "3.2.17", features = ["derive"] }
opener = "0.5.0"
